--- a/CODES/notebook2_lists.ipynb
+++ b/CODES/notebook2_lists.ipynb
@@ -146,8 +146,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dfda279a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n",
+      "['ODD', 2, 'ODD', 4, 'ODD', 6, 'ODD', 8, 'ODD', 10, 'ODD', 12, 'ODD', 14, 'ODD', 16, 'ODD', 18, 'ODD']\n",
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "['ODD', 2, 'ODD', 4, 'ODD', 6, 'ODD', 8, 'ODD', 10, 'ODD', 12, 'ODD', 14, 'ODD', 16, 'ODD', 18, 'ODD']\n",
+      "[2, 20, 2000, 4, 40, 4000, 6, 60, 6000]\n",
+      "[2, 20, 2000, 4, 40, 4000, 6, 60, 6000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List comprehensions\n",
+    "#  You can use loop to generate a listbased on range of numbers or any  other list. \n",
+    "\n",
+    "squares =[]\n",
+    "for x in range(1,11):\n",
+    "    square = x**2\n",
+    "    squares.append(square)\n",
+    "print(squares)\n",
+    "\n",
+    "# Compact way : list comprehensions  \n",
+    "# [operatio for_loop]\n",
+    "squares = [x**2 for x in range(1,11)]\n",
+    "print(squares)\n",
+    "\n",
+    "# find odd numbers with list comprehensions \n",
+    "# if -else syntax\n",
+    "odd = [x if x%2==0 else 'ODD' for x in range(1,20)]\n",
+    "print(odd)\n",
+    "\n",
+    "# only if syntax\n",
+    "# only even\n",
+    "even = [x for x in range(1,20) if x%2==0]\n",
+    "print(even)\n",
+    "#only odd \n",
+    "odd = [x for x in range(1,20) if x%2!=0]\n",
+    "print(odd)\n",
+    "\n",
+    "\n",
+    "odd = []\n",
+    "for x in range(1,20):\n",
+    "    if x%2 == 0:\n",
+    "        odd.append(x)\n",
+    "    else:\n",
+    "        odd.append('ODD')\n",
+    "print(odd)\n",
+    "\n",
+    "## multiple for loop\n",
+    "my_list = []\n",
+    "for x in [2,4,6]:\n",
+    "    for y in [1,10,1000]:\n",
+    "        my_list.append(x*y)\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list = [x*y for x in [2,4,6] for y in [1,10,1000]]\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126b2b5e",
    "metadata": {},
    "outputs": [],
    "source": []
