--- a/CODES/notebook2_lists.ipynb
+++ b/CODES/notebook2_lists.ipynb
@@ -22,6 +22,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "c5af65f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Geeks', 'for', 'Geeks']\n",
+      "Geeks\n",
+      "for\n",
+      "Geeks\n",
+      "Geeks\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "list_1 = [\"Geeks\", \"for\", \"Geeks\"] \n",
+    "print(list_1)       #['Geeks', 'for', 'Geeks']\n",
+    "print(list_1[0])    #Geeks\n",
+    "print(list_1[1])    #for\n",
+    "print(list_1[2])    #Geeks\n",
+    "print(list_1[2])    #Geeks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "7e82917e",
    "metadata": {},
