--- a/CODES/notebook2_lists.ipynb
+++ b/CODES/notebook2_lists.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7e82917e",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "1e5aa3bc",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,36 @@
     "# list_name[index]\n",
     "print(my_list[0])\n",
     "# accessing last element \n",
-    "print(my_list[-1])"
+    "print(my_list[-1])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6fd73173",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "['apples', 'bananas']\n",
+      "['apples', 'bananas']\n",
+      "apples\n",
+      "bananas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing nested list \n",
+    "list_nest = [1,2,['apples','bananas']]\n",
+    "print(list_nest[1])\n",
+    "print(list_nest[2])\n",
+    "print(list_nest[2][:])\n",
+    "print(list_nest[2][0])\n",
+    "print(list_nest[2][1])"
    ]
   },
   {
@@ -242,9 +271,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d7ec40d",
+   "metadata": {},
+   "source": [
+    "## List Important Methods"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126b2b5e",
+   "id": "efb1cc8a",
    "metadata": {},
    "outputs": [],
    "source": []
