--- a/CODES/notebook8_filehandling.ipynb
+++ b/CODES/notebook8_filehandling.ipynb
@@ -11,11 +11,81 @@
     "---\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bb14ce2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing to a file\n",
+    "filename = 'journal.txt'\n",
+    "with open(filename, 'w') as file_object:\n",
+    "    file_object.write(\"I love programming\")\n",
+    "    \n",
+    "file_object.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "132a4a1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love programming\n",
+      "\n",
+      " I love making games\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Reading a file and storing its lines \n",
+    "\n",
+    "filename = 'journal.txt'\n",
+    "with open(filename,'r') as file_object:\n",
+    "    lines = file_object.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b6e083b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Appending to a file \n",
+    "filename = 'journal.txt'\n",
+    "with open(filename,'a') as file_object:\n",
+    "    file_object.write(\"\\n I love making games\")   \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
