Added codes for common questions

--- a/CODES/gcp_connection.ipynb
+++ b/CODES/gcp_connection.ipynb
@@ -16,7 +16,21 @@
    "outputs": [],
    "source": [
     "# Python GBQ\n",
-    "import pandas_gbq"
+    "import pandas_gbq as pd_gbq\n",
+    "\n",
+    "# Reading\n",
+    "sql_query = f\"select * from `project.dataset.table` limit 10\"\n",
+    "df = pd_gbq.read_gbq(sql_query,use_bqstorage_api=True)\n",
+    "\n",
+    "# Writing\n",
+    "write_bq_table_name = 'project.dataset.table'\n",
+    "pd_gbq.to_gbq(\n",
+    "    df_results, \n",
+    "    destination_table=\"SMB_LOAD.PRODUCT_CODES_PRESENCE\",\n",
+    "    project_id=\"bt-datasci-aif-exp-prod\",\n",
+    "    #credentials=credentials,\n",
+    "    #if_exists=\"replace\"\n",
+    ")"
    ]
   },
   {
