--- a/CODES/notebook7_classes.ipynb
+++ b/CODES/notebook7_classes.ipynb
@@ -7,6 +7,120 @@
    "source": [
     "# Classes and Object Oriented Programming in Python"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d18b29f8",
+   "metadata": {},
+   "source": [
+    "A class defines the behaviour of an object and the kind of information an object can store. The information in a class is stored in attributes, and functions that belong to a class are called methods. A child class inherits the attributes and methods from its parent class. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dea02184",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bruno is a great dog!\n",
+      "Bruno is sitting\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a Dog class \n",
+    "class Dog():\n",
+    "    \"\"\"Represents a dog class\"\"\"\n",
+    "    def __init__(self,name):\n",
+    "        \"\"\"Initialize dog object.\"\"\"\n",
+    "        self.name = name\n",
+    "    def sit(self):\n",
+    "        \"\"\"Similuate sitting\"\"\"\n",
+    "        print(self.name + \" is sitting\")\n",
+    "\n",
+    "my_dog = Dog('Bruno')\n",
+    "\n",
+    "print(my_dog.name + \" is a great dog!\")\n",
+    "my_dog.sit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "91f9cb9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bruno is a search dog.\n",
+      "Bruno is sitting\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Dog' object has no attribute 'search'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(my_dog.name + \u001b[33m\"\u001b[39m\u001b[33m is a search dog.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m my_dog.sit()\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[43mmy_dog\u001b[49m\u001b[43m.\u001b[49m\u001b[43msearch\u001b[49m() \u001b[38;5;66;03m# This will raise an AttributeError since my_dog is not a SARDog\u001b[39;00m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Dog' object has no attribute 'search'"
+     ]
+    }
+   ],
+   "source": [
+    "# Inheritance\n",
+    "class SARDog(Dog):\n",
+    "    \"\"\"Represents a search Dig.\"\"\"\n",
+    "\n",
+    "    def __init__(self,name):\n",
+    "        \"\"\"Initialize the sardog\"\"\"\n",
+    "        super().__init__(name)\n",
+    "\n",
+    "    def search(self):\n",
+    "        \"\"\"Simulate searching\"\"\"\n",
+    "        print(self.name + \" is searching\")\n",
+    "\n",
+    "my_sar_dog = SARDog('Willie')\n",
+    "\n",
+    "print(my_dog.name + \" is a search dog.\")\n",
+    "my_dog.sit()\n",
+    "my_dog.search() # This will raise an AttributeError since my_dog is not a SARDog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fa7e7fef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Willie is sitting\n",
+      "Willie is searching\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_sar_dog.sit()\n",
+    "my_sar_dog.search()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51239873",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
