--- a/CODES/cheat_sheet_codes.ipynb
+++ b/CODES/cheat_sheet_codes.ipynb
@@ -2,16 +2,353 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "50aab8fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After swapping:\n",
+      "Value of a: 2\n",
+      "Value of b: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python code to swap two variables\n",
+    "a = input(\"Emter the value of a:\")\n",
+    "b = input(\"Enter the value of b:\")\n",
+    "\n",
+    "a, b = b, a\n",
+    "print(\"After swapping:\")\n",
+    "print(\"Value of a:\", a)\n",
+    "print(\"Value of b:\", b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7c784576",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random number between 1 and 100 is: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a python code to generate a random number \n",
+    "import random\n",
+    "random_number = random.randint(1, 100)\n",
+    "print(\"Random number between 1 and 100 is:\", random_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f6c98fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   February 2026\n",
+      "Mo Tu We Th Fr Sa Su\n",
+      "                   1\n",
+      " 2  3  4  5  6  7  8\n",
+      " 9 10 11 12 13 14 15\n",
+      "16 17 18 19 20 21 22\n",
+      "23 24 25 26 27 28\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python program to print calendar\n",
+    "import calendar\n",
+    "year = int(input(\"Enter year: \"))\n",
+    "month = int(input(\"Enter month: \"))\n",
+    "print(calendar.month(year, month))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fe41f021",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check no. is positive or negative or zero \n",
+    "a = float(input(\"Enter a number: \"))\n",
+    "if a > 0:\n",
+    "    print(\"Positive number\")\n",
+    "elif a == 0:\n",
+    "    print(\"Zero\")\n",
+    "else:\n",
+    "    print(\"Negative number\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "502ad76a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 is Odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if number is even or odd\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "if (num % 2) == 0:\n",
+    "    print(\"{0} is Even\".format(num))\n",
+    "else:\n",
+    "    print(\"{0} is Odd\".format(num))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "199d7067",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check prime number\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "if num == 1:\n",
+    "    print(num, \"is not a prime number\")\n",
+    "elif num > 1:\n",
+    "    for i in range(2, num):\n",
+    "        if (num % i) == 0:\n",
+    "            print(num, \"is not a prime number\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(num, \"is a prime number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "567034e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The factorial of 7 is 5040\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find factorial of a number\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "factorial = 1\n",
+    "if num < 0:\n",
+    "    print(\"Factorial does not exist for negative numbers\")\n",
+    "elif num == 0:\n",
+    "    print(\"The factorial of 0 is 1\")\n",
+    "else:\n",
+    "    for i in range(1, num + 1):\n",
+    "        factorial = factorial * i\n",
+    "    print(\"The factorial of\", num, \"is\", factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7edf1b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fibonacci sequence:\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fibonacci sequence\n",
+    "nterms = int(input(\"How many terms? \"))\n",
+    "n1, n2 = 0, 1\n",
+    "count = 0\n",
+    "if nterms <= 0:\n",
+    "    print(\"Please enter a positive integer\")\n",
+    "elif nterms == 1:\n",
+    "    print(\"Fibonacci sequence upto\", nterms, \":\")\n",
+    "    print(n1)\n",
+    "else:\n",
+    "    print(\"Fibonacci sequence:\")\n",
+    "    while count < nterms:\n",
+    "        print(n1)\n",
+    "        nth = n1 + n2\n",
+    "        n1 = n2\n",
+    "        n2 = nth\n",
+    "        count += 1  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c5dd420",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fibonacci series using recursion\n",
+    "def fibonacci(n):\n",
+    "    if n <= 0:\n",
+    "        return \"Please enter a positive integer\"\n",
+    "    elif n == 1:\n",
+    "        return 0\n",
+    "    elif n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fibonacci(n - 1) + fibonacci(n - 2)\n",
+    "    \n",
+    "for i in range(1,6):\n",
+    "    print(fibonacci(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9956af94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 1 is 1\n",
+      "Factorial of 2 is 2\n",
+      "Factorial of 3 is 6\n",
+      "Factorial of 4 is 24\n",
+      "Factorial of 5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# factorial using recursion\n",
+    "def factorial(n):\n",
+    "    if n < 0:\n",
+    "        return \"Factorial does not exist for negative numbers\"\n",
+    "    elif n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)\n",
+    "for i in range(1,6):\n",
+    "    print(\"Factorial of\", i, \"is\", factorial(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb32b02d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find largest element in an array\n",
+    "def find_largest(arr):\n",
+    "    largest = arr[0]\n",
+    "    for num in arr:\n",
+    "        if num > largest:\n",
+    "            largest = num\n",
+    "    return largest          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "400b9c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find smallest no in a list "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a77ab178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find n largest no in a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca75c7b5",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
